static/Header.module.scss
.header {
  padding: 20px 10px;
  color: #fefefe;
  /* #0098ff #007acc #0065a9 */
  background: linear-gradient(
    22deg,
    rgba(0, 152, 255, 1),
    rgba(0, 122, 204, 1),
    rgba(0, 101, 169, 1)
  );
  width: 100%;

  a {
    float: left;
    text-align: center;
    padding: 12px;
    text-decoration: none;
    font-size: 1.4rem;
    line-height: 25px;
    border-radius: 4px;
    display: block;

    :hover {
      color: #0098ff;
    }
  }

  @media screen and (max-width: 600px) {
    height: 64px;
    padding: 10px 0;

    a {
      float: none;
      display: block;
      text-align: center;
      font-size: 1.2rem;
    }

    .links_wrapper {
      display: none;
    }
  }
}

.logo {
  font-size: 1.4rem;

  @media (min-width: 600px) {
    font-size: 1.2rem;
  }
}

.links_wrapper {
  float: right;
}

.link {
  font-size: 1.4rem;

  @media (min-width: 600px) {
    font-size: 1.2rem;
  }
}

@media (max-width: 600px) {
  .navActive {
    height: 4rem;
    position: fixed;
    top: 0;
    left: 0;
    box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
    transition: 300ms;
    /* #0098ff #007acc #0065a9 */
    background: linear-gradient(
      22deg,
      rgba(0, 152, 255, 0.5),
      rgba(0, 122, 204, 0.5),
      rgba(0, 101, 169, 0.5)
    );
  }
}

